[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Entities/Player/player_right_attack_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Entities/Player/player_right_fireball_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Entities/Player/player_left_attack_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Entities/Player/player_right_idle_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Entities/Player/player_right_walk_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Entities/Player/player_left_walk_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Entities/Player/player_down_attack_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Entities/Player/player_left_fireball_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Entities/Player/player_right_fireball_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Entities/Player/player_left_idle_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Entities/Player/player_right_idle_1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Entities/Player/player_right_walk_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Entities/Player/player_left_attack_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Entities/Player/player_left_walk_2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Entities/Player/player_right_attack_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Entities/Player/player_left_fireball_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Entities/Player/player_left_idle_2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Entities/Player/player_down_walk_2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Entities/Player/player_down_fireball_1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Entities/Player/player_down_fireball_2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Entities/Player/player_down_attack_1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Entities/Player/player_down_idle_1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Entities/Player/player_down_idle_2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Entities/Player/player_down_walk_1.png" type="Texture" id=25]
[ext_resource path="res://Assets/Entities/Player/player_up_fireball_1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Entities/Player/player_up_fireball_2.png" type="Texture" id=27]
[ext_resource path="res://Assets/Entities/Player/player_up_idle_2.png" type="Texture" id=28]
[ext_resource path="res://Assets/Entities/Player/player_up_walk_2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Entities/Player/player_up_attack_2.png" type="Texture" id=30]
[ext_resource path="res://Assets/Entities/Player/player_up_idle_1.png" type="Texture" id=31]
[ext_resource path="res://Assets/Entities/Player/player_up_attack_1.png" type="Texture" id=32]
[ext_resource path="res://Assets/Entities/Player/player_up_walk_1.png" type="Texture" id=33]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=34]
[ext_resource path="res://Assets/Sounds/night-chip.ogg" type="AudioStream" id=35]
[ext_resource path="res://Assets/Sounds/mountain-trials.ogg" type="AudioStream" id=36]
[ext_resource path="res://Assets/Sounds/attack.wav" type="AudioStream" id=37]
[ext_resource path="res://Assets/Sounds/fireball.wav" type="AudioStream" id=38]
[ext_resource path="res://Assets/Sounds/object.wav" type="AudioStream" id=39]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 8 ) ],
"loop": false,
"name": "down_attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "down_fireball",
"speed": 7.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "down_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 19 ) ],
"loop": true,
"name": "down_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ) ],
"loop": false,
"name": "left_attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 9 ) ],
"loop": false,
"name": "left_fireball",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 18 ) ],
"loop": true,
"name": "left_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 15 ) ],
"loop": true,
"name": "left_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 1 ) ],
"loop": false,
"name": "right_attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 3 ) ],
"loop": false,
"name": "right_fireball",
"speed": 7.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "right_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ) ],
"loop": true,
"name": "right_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 30 ) ],
"loop": false,
"name": "up_attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "up_fireball",
"speed": 7.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 28 ) ],
"loop": true,
"name": "up_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 29 ) ],
"loop": true,
"name": "up_walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=4]
resource_name = "Game Over"
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Sleep"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/SleepScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "down_idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Root" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GameOver" type="ColorRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0.00784314 )
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0.54902, 0, 0, 1 )

[node name="Label" type="Label" parent="GUI/GameOver"]
margin_left = 125.0
margin_top = 85.0
margin_right = 201.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 34 )
text = "GAME OVER"
align = 1

[node name="Label2" type="Label" parent="GUI/GameOver"]
margin_left = 79.0
margin_top = 127.0
margin_right = 261.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 34 )
text = "PRESS ESC TO RETURN TO MAIN MENU"
align = 1

[node name="SleepScreen" type="ColorRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/SleepScreen"]
margin_top = 81.0
margin_right = 320.0
margin_bottom = 101.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 34 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=40 freq=2]ZZZ...[/wave][/center]"
text = "ZZZ..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Game Over" = SubResource( 4 )
anims/Hit = SubResource( 3 )
anims/Sleep = SubResource( 5 )

[node name="MusicGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 36 )
volume_db = -6.0
autoplay = true

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )
volume_db = 6.0

[node name="FireballSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
volume_db = 6.0

[node name="ObjectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )
volume_db = 6.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
